--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
 		"postgres": "3.4.8",
 		"react": "19.2.3",
 		"react-dom": "19.2.3",
+		"react-markdown": "10.1.0",
+		"remark-gfm": "4.0.1",
 		"uuidv7": "1.1.0",
 		"web-push": "3.6.7",
 		"zod": "4.3.6"
