--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
 		"db:generate": "drizzle-kit generate",
 		"db:push": "drizzle-kit push",
 		"db:migrate": "drizzle-kit migrate",
-		"db:studio": "drizzle-kit studio"
+		"db:studio": "drizzle-kit studio",
+		"posts:delete": "node scripts/delete-posts.mjs",
+		"users:ban": "node scripts/ban-user.mjs",
+		"ips:ban": "node scripts/ban-ip.mjs"
 	},
 	"dependencies": {
 		"@hono/zod-validator": "0.7.6",
